unfixed stuff, divisors for composites and add for lists

--- a/assignments/prime-numbers/prime.html
+++ b/assignments/prime-numbers/prime.html
@@ -43,10 +43,12 @@ Grade Level Completed: C, B, A, and Bonus
                 <div class="list">
                     <h2>Prime Numbers</h2>
                     <ul id="primeList"></ul>
+                    <button id="primeSumButton">SUM</button>
                 </div>
                 <div class="list">
                     <h2>Composite Numbers</h2>
                     <ul id="nonPrimeList"></ul>
+                    <button id="primeSumButton">SUM</button>
                 </div>
             </div>
 
