--- a/assignments/prime-numbers/prime.html
+++ b/assignments/prime-numbers/prime.html
@@ -48,7 +48,7 @@ Grade Level Completed: C, B, A, and Bonus
                 <div class="list">
                     <h2>Composite Numbers</h2>
                     <ul id="nonPrimeList"></ul>
-                    <button id="primeSumButton">SUM</button>
+                    <button id="nonPrimeSumButton">SUM</button>
                 </div>
             </div>
 
