added Keypress files

--- a/assignments/hybrid-layout/layout.html
+++ b/assignments/hybrid-layout/layout.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="layout.css">
     <link rel="stylesheet" href="../../styles/navbar.css">
     <link rel="stylesheet" href="../../styles/footer.css">
+    <title>Official JL</title>
 </head>
 <body>
     <div id="navbar-container"></div>
