--- a/navbar.html
+++ b/navbar.html
@@ -62,6 +62,9 @@
                 <li class="nav-dropdown-item">
                     <a href="/assignments/prime-numbers/prime.html">Prime-Numbers</a>
                 </li>
+                <li class="nav-dropdown-item">
+                    <a href="/assignments/keypress/keypress.html">Keypress</a>
+                </li>
             </ul>
         </li>
     </ul>
