--- a/navbar.html
+++ b/navbar.html
@@ -48,7 +48,7 @@
                     <a href="/assignments/button-mv/ButtonMove.html">Button-move</a>
                 </li>
                 <li class="nav-dropdown-item">
-                    <a href="/assignments/php-demo/helloworld.php">PhP-demo</a>
+                    <a href="/assignments/php-demo/helloworld.php">PHP-demo</a>
                 </li>
                 <li class="nav-dropdown-item">
                     <a href="/assignments/band/index.html">YEEZY-SITE</a>
