--- a/assignments/keypress/keypress.html
+++ b/assignments/keypress/keypress.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="layout.css">
     <link rel="stylesheet" href="../../styles/navbar.css">
     <link rel="stylesheet" href="../../styles/footer.css">
+    <link rel="stylesheet" href="keypress.css"
+    <script src="keypress.js"></script>
   </head>
   <body>
     <div id="navbar-container"></div>
@@ -36,6 +38,5 @@
             })
             .catch(error => console.error('Error loading footer:', error));
     </script>
-    <script src="keypress.js"></script>
   </body>
 </html>
