--- a/navbar.html
+++ b/navbar.html
@@ -65,6 +65,9 @@
                 <li class="nav-dropdown-item">
                     <a href="/assignments/keypress/keypress.html">Keypress</a>
                 </li>
+                <li class="nav-dropdown-item">
+                    <a href="/assignments/jquery/jq.html">jQuery</a>
+                </li>
             </ul>
         </li>
     </ul>
