--- a/assignments/keypress/keypress.html
+++ b/assignments/keypress/keypress.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="example.js"></script>
+    <script src="keypress.js"></script>
     <meta charset="UTF-8">
     <title>Official JL - KeyPress Demo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
