--- a/assignments/button-mv/ButtonMove.html
+++ b/assignments/button-mv/ButtonMove.html
@@ -23,6 +23,9 @@
                 .catch(error => console.error('Error loading navbar:', error));
         </script>
 
+        <h1 class="page-title">Button Move</h1>
+
+
         <!-- Main panel for moving button -->
         <div class="controls" id="controls">
             <select id="colorSelect">
