--- a/navbar.html
+++ b/navbar.html
@@ -68,6 +68,9 @@
                 <li class="nav-dropdown-item">
                     <a href="/assignments/jquery/jq.html">jQuery</a>
                 </li>
+                <li class="nav-dropdown-item">
+                    <a href="/assignments/ajax-handlebars/aj.html">Ajax-Handlebars</a>
+                </li>
             </ul>
         </li>
     </ul>
