--- a/assignments/ajax-handlebars/aj.html
+++ b/assignments/ajax-handlebars/aj.html
@@ -22,7 +22,13 @@
                 .catch(error => console.error('Error loading navbar:', error));
         </script>
 
-        
+        <h1>AJAX & Handlebars</h1>
+        <script type="text/x-handlebars-template">
+            {{
+                #each 
+            }}
+        </script>
+
 
         <div id="footer-container"></div>
         <script>
@@ -33,6 +39,8 @@
                 })
                 .catch(error => console.error('Error loading footer:', error));
         </script>
+       
         <script src="aj.js"></script>
+        <script src="handlebars.js"></script>
     </body>
 </html>
