added Hangman Game

--- a/navbar.html
+++ b/navbar.html
@@ -19,6 +19,9 @@
                 <li class="nav-dropdown-item">
                     <a href="/group_assignments/ga4/GroupEvents.html">Group Assignment IV</a>
                 </li>
+                <li class="nav-dropdown-item">
+                    <a href="/group_assignments/ga5/hangm.html">Group Assignment V</a>
+                </li>
             </ul>
         </li>
         <li class="navbar-item">
