added Heartless, Street Lights, and Coldest Winter to ga3

--- a/group_assignments/ga3/GroupAudio.html
+++ b/group_assignments/ga3/GroupAudio.html
@@ -72,6 +72,18 @@
                         <i class="fa fa-music"></i>
                         <span>Waves - Kanye West</span>
                     </div>
+                    <div class="song" data-title="Heartless" data-artist="Kanye West" data-src="audio/hl.mp3">
+                        <i class="fa fa-music"></i>
+                        <span>Heartless - Kanye West</span>
+                    </div>
+                    <div class="song" data-title="Street Lights" data-artist="Kanye West" data-src="audio/sl.mp3">
+                        <i class="fa fa-music"></i>
+                        <span>Street Lights - Kanye West</span>
+                    </div>
+                    <div class="song" data-title="Coldest Winter" data-artist="Kanye West" data-src="audio/cw.mp3">
+                        <i class="fa fa-music"></i>
+                        <span>Coldest Winter - Kanye West</span>
+                    </div>
                 </div>
             </div>
             <div class="right-col" id = "player-container">
