updated navbar for AudioChanger

--- a/navbar.html
+++ b/navbar.html
@@ -74,6 +74,9 @@
                 <li class="nav-dropdown-item">
                     <a href="/assignments/ajax-handlebars/aj.html">Ajax-Handlebars</a>
                 </li>
+                <li class="nav-dropdown-item">
+                    <a href="/assignments/audio-changer/ac.html">Audio-Changer</a>
+                </li>
             </ul>
         </li>
     </ul>
