added ajax-php files

--- a/navbar.html
+++ b/navbar.html
@@ -77,6 +77,9 @@
                 <li class="nav-dropdown-item">
                     <a href="/assignments/audio-changer/ac.html">Audio-Changer</a>
                 </li>
+                <li class="nav-dropdown-item">
+                    <a href="/assignments/ajax-php/">Ajax-PHP</a>
+                </li>
             </ul>
         </li>
     </ul>
