--- a/assignments/ajax-php/livesearch.html
+++ b/assignments/ajax-php/livesearch.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="styles.css">
         <title>Official JL</title>
         <link rel="icon" href="../../img/jasnlogo.png" alt="logo" />
-        <script type="text/javascript" src="ajax.js"></script>
+        <script type="text/javascript" src="api/ajax.js"></script>
     </head>
     <body>
         <div id="navbar-container"></div>
