added zip code files

--- a/navbar.html
+++ b/navbar.html
@@ -22,6 +22,9 @@
                 <li class="nav-dropdown-item">
                     <a href="/group_assignments/ga5/hangm.html">Group Assignment V</a>
                 </li>
+                <li class="nav-dropdown-item">
+                    <a href="/group_assignments/ga6/zip.html">Group Assignment VI</a>
+                </li>
             </ul>
         </li>
         <li class="navbar-item">
