zipcode bug fixed

--- a/group_assignments/ga6/zip.html
+++ b/group_assignments/ga6/zip.html
@@ -1,4 +1,4 @@
-><!DOCTYPE html>
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="UTF-8">
@@ -25,6 +25,7 @@
 
         <main>
             <h1>ZipDistance Finder</h1>
+            <p><strong>Example:</strong><br>Zip Code 1: 29631<br>Zip Code 2: 29594<br>Distance: 184.17 miles.</p>
             <form id="zipForm">
                 <div>
                     <label for="zip1">Zip Code 1:</label>
