--- a/group_assignments/ga6/zip.html
+++ b/group_assignments/ga6/zip.html
@@ -24,7 +24,7 @@
         </script>
 
         <main>
-            <h1>ZipDistance Finder</h1>
+            <h1 style="color:blue;">Zip Distance Finder</h1>
             <p><strong>Example:</strong><br>Zip Code 1: 29631<br>Zip Code 2: 29594<br>Distance: 184.17 miles.</p>
             <form id="zipForm">
                 <div>
