--- a/navbar.html
+++ b/navbar.html
@@ -25,6 +25,9 @@
                 <li class="nav-dropdown-item">
                     <a href="/group_assignments/ga6/zip.html">Group Assignment VI</a>
                 </li>
+                <li class="nav-dropdown-item">
+                    <a href="/group_assignments/ga7/login.php">Group Assignment VII</a>
+                </li>
             </ul>
         </li>
         <li class="navbar-item">
