added project directory + moved audio changer under /projects

--- a/navbar.html
+++ b/navbar.html
@@ -81,10 +81,18 @@
                     <a href="/assignments/ajax-handlebars/aj.html">Ajax-Handlebars</a>
                 </li>
                 <li class="nav-dropdown-item">
-                    <a href="/assignments/audio-changer/ac.html">Audio-Changer</a>
+                    <a href="/assignments/ajax-php/">Ajax-PHP</a>
+                </li>
+            </ul>
+        </li>
+        <li class="navbar-item">
+            <a href="#"><i class="fa fa-book"></i> Projects</a>
+            <ul class="nav-dropdown">
+                <li class="nav-dropdown-item">
+                    <a href="/projects/audio-changer/ac.html">Audio Changer Project</a>
                 </li>
                 <li class="nav-dropdown-item">
-                    <a href="/assignments/ajax-php/">Ajax-PHP</a>
+                    <a href="/projects/"></a>
                 </li>
             </ul>
         </li>
