--- a/navbar.html
+++ b/navbar.html
@@ -81,7 +81,7 @@
                     <a href="/assignments/ajax-handlebars/aj.html">Ajax-Handlebars</a>
                 </li>
                 <li class="nav-dropdown-item">
-                    <a href="/assignments/ajax-php/">Ajax-PHP</a>
+                    <a href="/assignments/forms-php/form.html">Forms-PHP</a>
                 </li>
             </ul>
         </li>
