added dmmt assignment

--- a/navbar.html
+++ b/navbar.html
@@ -83,6 +83,9 @@
                 <li class="nav-dropdown-item">
                     <a href="/assignments/forms-php/form.html">Forms-PHP</a>
                 </li>
+                <li class="nav-dropdown-item">
+                    <a href="/assignments/">DMMT-Examples</a>
+                </li>
             </ul>
         </li>
         <li class="navbar-item">
