--- a/navbar.html
+++ b/navbar.html
@@ -84,7 +84,7 @@
                     <a href="/assignments/forms-php/form.html">Forms-PHP</a>
                 </li>
                 <li class="nav-dropdown-item">
-                    <a href="/assignments/">DMMT-Examples</a>
+                    <a href="/assignments/dmmt-examples/dmmt.html">DMMT-Examples</a>
                 </li>
             </ul>
         </li>
