--- a/group_assignments/ga8/form-group.html
+++ b/group_assignments/ga8/form-group.html
@@ -24,7 +24,7 @@
         </script>
         <h1>Form Demo</h1>
         <h2>Please reference the GitHub to see which box is which</h2>
-        
+
         <form action="process.php" method="post" enctype="multipart/form-data">
             <!-- Section for text input -->
             <p>
@@ -55,11 +55,11 @@
             <p>
                 <label>Checkboxes:</label><br>
                 <input type="checkbox" name="checkboxes[]" value="Option1" id="checkbox1">
-                <label for="checkbox1">Option 1</label><br>
+                <label for="checkbox1">Option A</label><br>
                 <input type="checkbox" name="checkboxes[]" value="Option2" id="checkbox2">
-                <label for="checkbox2">Option 2</label><br>
+                <label for="checkbox2">Option B</label><br>
                 <input type="checkbox" name="checkboxes[]" value="Option3" id="checkbox3">
-                <label for="checkbox3">Option 3</label>
+                <label for="checkbox3">Option C</label>
             </p>
         
             <!-- Section for radio button -->
