--- a/group_assignments/ga8/form-group.html
+++ b/group_assignments/ga8/form-group.html
@@ -55,11 +55,11 @@
             <p>
                 <label>Checkboxes:</label><br>
                 <input type="checkbox" name="checkboxes[]" value="Option1" id="checkbox1">
-                <label for="checkbox1">Option A</label><br>
+                <label for="checkbox1">Checkbox 1</label><br>
                 <input type="checkbox" name="checkboxes[]" value="Option2" id="checkbox2">
-                <label for="checkbox2">Option B</label><br>
+                <label for="checkbox2">Checkbox 2</label><br>
                 <input type="checkbox" name="checkboxes[]" value="Option3" id="checkbox3">
-                <label for="checkbox3">Option C</label>
+                <label for="checkbox3">Checkbox 3</label>
             </p>
         
             <!-- Section for radio button -->
@@ -77,9 +77,9 @@
             <p>
                 <label for="selectInput">Selection List:</label>
                 <select id="selectInput" name="selectInput">
-                    <option value="Select1">Select Option 1</option>
-                    <option value="Select2">Select Option 2</option>
-                    <option value="Select3">Select Option 3</option>
+                    <option value="Select1">Select Option First</option>
+                    <option value="Select2">Select Option Second</option>
+                    <option value="Select3">Select Option Third</option>
                 </select>
             </p>
         
