--- a/navbar.html
+++ b/navbar.html
@@ -28,6 +28,9 @@
                 <li class="nav-dropdown-item">
                     <a href="/group_assignments/ga7/login.php">Group Assignment VII</a>
                 </li>
+                <li class="nav-dropdown-item">
+                    <a href="/group_assignments/ga8/form-group.html">Group Assignment VIII</a>
+                </li>
             </ul>
         </li>
         <li class="navbar-item">
