--- a/navbar.html
+++ b/navbar.html
@@ -98,7 +98,7 @@
                     <a href="/projects/audio-changer/ac.html">Audio Changer Project</a>
                 </li>
                 <li class="nav-dropdown-item">
-                    <a href="/projects/collect-app-p1/"></a>
+                    <a href="/projects/collect-app-p1/index.html">Collect App 1</a>
                 </li>
             </ul>
         </li>
