--- a/navbar.html
+++ b/navbar.html
@@ -95,10 +95,13 @@
             <a href="#"><i class="fa fa-book"></i> Projects</a>
             <ul class="nav-dropdown">
                 <li class="nav-dropdown-item">
-                    <a href="/projects/audio-changer/ac.html">Audio Changer Project</a>
+                    <a href="/projects/audio-changer/ac.html">Audio Changer</a>
                 </li>
                 <li class="nav-dropdown-item">
                     <a href="/projects/collect-app-p1/index.html">Collect App 1</a>
+                </li>
+                <li class="nav-dropdown-item">
+                    <a href="/projects/calendar/showcalendar_withevent.php">Calendar</a>
                 </li>
             </ul>
         </li>
