--- a/navbar.html
+++ b/navbar.html
@@ -103,6 +103,9 @@
                 <li class="nav-dropdown-item">
                     <a href="/projects/calendar/showcalendar_withevent.php">Calendar</a>
                 </li>
+                <li class="nav-dropdown-item">
+                    <a href="/projects/collect-app-p2/index.html">Collect App 2</a>
+                </li>
             </ul>
         </li>
     </ul>
