--- a/navbar.html
+++ b/navbar.html
@@ -98,6 +98,9 @@
                     <a href="/projects/audio-changer/ac.html">Audio Changer</a>
                 </li>
                 <li class="nav-dropdown-item">
+                    <a href="/projects/audio-changer-improved/ac.html">Audio Changer Improved</a>
+                </li>
+                <li class="nav-dropdown-item">
                     <a href="/projects/collect-app-p1/index.html">Collect App 1</a>
                 </li>
                 <li class="nav-dropdown-item">
