--- a/projects/audio-changer-improved/results.html
+++ b/projects/audio-changer-improved/results.html
@@ -56,6 +56,30 @@
             </div>
         </section>
 
+        <section id="testing-process">
+            <h2>Testing Process</h2>
+            <div class="test-tasks">
+                <h3>Tasks Assigned:</h3>
+                <ul>
+                    <li>Play a song</li>
+                    <li>Pause a song</li>
+                    <li>Skip forward and back on a song</li>
+                    <li>Play a specific song</li>
+                    <li>Add a new song</li>
+                </ul>
+            </div>
+            <div class="test-observations">
+                <h3>User Actions & Observations:</h3>
+                <ul>
+                    <li>✅ Successfully played and paused songs</li>
+                    <li>✅ Effectively used forward/backward controls</li>
+                    <li>✅ Navigated playlist and selected specific songs</li>
+                    <li>✅ Removed a song from playlist</li>
+                    <li>❗ Struggled with the song addition process (directory reference required)</li>
+                </ul>
+            </div>
+        </section>
+
         <section id="testing-phase">
             <h2>Testing Phase</h2>
             <p>I have welcomed my roommate and briefed them generally what this assignment was about and to not be biased during this test. The test will be conducted on my Macbook.</p>
@@ -99,30 +123,6 @@
             </div>
         </section>
 
-        <section id="testing-process">
-            <h2>Testing Process</h2>
-            <div class="test-tasks">
-                <h3>Tasks Assigned:</h3>
-                <ul>
-                    <li>Play a song</li>
-                    <li>Pause a song</li>
-                    <li>Skip forward and back on a song</li>
-                    <li>Play a specific song</li>
-                    <li>Add a new song</li>
-                </ul>
-            </div>
-            <div class="test-observations">
-                <h3>User Actions & Observations:</h3>
-                <ul>
-                    <li>✅ Successfully played and paused songs</li>
-                    <li>✅ Effectively used forward/backward controls</li>
-                    <li>✅ Navigated playlist and selected specific songs</li>
-                    <li>✅ Removed a song from playlist</li>
-                    <li>❗ Struggled with the song addition process (directory reference required)</li>
-                </ul>
-            </div>
-        </section>
-
         <section id="improvements">
             <h2>Improvements Made</h2>
             <div class="improvements-grid">
@@ -132,7 +132,7 @@
                         <li>Added theme toggle button in header</li>
                         <li>Smooth transition between modes</li>
                     </ul>
-                    <img src="img/3.png" alt="pic3">
+                    <img src="img/3.png" alt="Dark mode toggle demonstration">
                 </div>
                 <div class="improvement-item">
                     <h3>Loop Button Enhancement</h3>
@@ -140,7 +140,7 @@
                         <li>Visual feedback for active state</li>
                         <li>Scale animation and color change</li>
                     </ul>
-                    <img src="img/4.png" alt="pic4">
+                    <img src="img/4.png" alt="Loop button enhancement demonstration">
                 </div>
                 <div class="improvement-item">
                     <h3>Local File Upload</h3>
@@ -149,7 +149,7 @@
                         <li>Replaced URL-based addition</li>
                         <li>Persistent storage</li>
                     </ul>
-                    <img src="img/5.png" alt="pic5">
+                    <img src="img/5.png" alt="Local file upload interface">
                 </div>
                 <div class="improvement-item">
                     <h3>UI Improvements</h3>
