--- a/projects/audio-changer-improved/results.html
+++ b/projects/audio-changer-improved/results.html
@@ -103,6 +103,29 @@
             </div>
         </section>
 
+        <section id="reflection">
+            <h2>Reflection</h2>
+            <div class="reflection-points">
+                <div class="reflection-column">
+                    <h3>Pain Points Identified:</h3>
+                    <ul>
+                        <li>Lack of dark mode option</li>
+                        <li>Complicated song addition process</li>
+                        <li>Missing loop functionality</li>
+                    </ul>
+                </div>
+                <div class="reflection-column">
+                    <h3>Application Successes:</h3>
+                    <ul>
+                        <li>Clear purpose communication</li>
+                        <li>Passed trunk test</li>
+                        <li>Achieved core functionality</li>
+                        <li>Comfortable user experience</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
         <section id="app-versions">
             <h2>App Versions</h2>
             <div class="version-comparison">
@@ -159,25 +182,6 @@
                         <li>Improved user interaction</li>
                     </ul>
                 </div>
-            </div>
-        </section>
-
-        <section id="reflection">
-            <h2>Reflection</h2>
-            <div class="reflection-points">
-                <h3>Pain Points Identified:</h3>
-                <ul>
-                    <li>Lack of dark mode option</li>
-                    <li>Complicated song addition process</li>
-                    <li>Missing loop functionality</li>
-                </ul>
-                <h3>Successes:</h3>
-                <ul>
-                    <li>Clear purpose communication</li>
-                    <li>Passed trunk test</li>
-                    <li>Achieved core functionality</li>
-                    <li>Comfortable user experience</li>
-                </ul>
             </div>
         </section>
     </main>
