--- a/projects/audio-changer-improved/ac.html
+++ b/projects/audio-changer-improved/ac.html
@@ -25,9 +25,12 @@
         </script>
         <header>
             <h1>Audio Player App</h1>
-            <button id="theme-toggle" aria-label="Toggle dark mode">
-                <i class="fas fa-moon"></i>
-            </button>
+            <div class="header-controls">
+                <a href="results.html" class="results-link">View Usability Test Results</a>
+                <button id="theme-toggle" aria-label="Toggle dark mode">
+                    <i class="fas fa-moon"></i>
+                </button>
+            </div>
         </header>
         <main>
             <!-- Audio Element and Controls -->
