--- a/projects/audio-changer/ac.html
+++ b/projects/audio-changer/ac.html
@@ -25,6 +25,7 @@
         </script>
         <header>
             <h1>Audio Player App</h1>
+            <a href="../audio-changer-improved/results.html" class="results-link">View Usability Test Results</a>
         </header>
         <main>
             <!-- Audio Element and Controls -->
