--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                 <h1 class="hero-title">Welcome to My Website</h1>
                 <p class="hero-description">
                     Hi I'm <strong>Jason</strong>. This is my website for <strong>CPSC 3750 Spring 2025</strong>.
-                    <br>My interests include <strong>politics</strong>, <strong>architecture</strong>, and <strong>music</strong>.
+                    <br>My interests include <strong>politics</strong>, <strong>archit
+                        ecture</strong>, and <strong>music</strong>.
                 </p>
                 <a href="#about" class="btn btn-primary">Learn More</a>
             </div>
