--- a/projects/calendar/showcalendar_inJS.html
+++ b/projects/calendar/showcalendar_inJS.html
@@ -5,6 +5,10 @@
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="calendar_functions.js"></script>
   <link rel="stylesheet" href="showcalendar_inJS.css">
+  <link rel="stylesheet" href="showcalendar_withevent.css" type="text/css">
+  <link rel="stylesheet" href="navbar.css" type="text/css">
+  <link rel="stylesheet" href="sidebar.css" type="text/css">
+  <link rel="stylesheet" href="footer.css" type="text/css">
 </head>
 <body>
   <h1>Select a Month/Year Combination</h1>
