--- a/projects/calendar/sidebar.html
+++ b/projects/calendar/sidebar.html
@@ -1,9 +1,6 @@
 <div class="sidebar" id="sidebar">
     <div class="sidebar-header">
         <h2>Calendar Menu</h2>
-        <button class="sidebar-toggle" id="sidebarToggle">
-            <i class="fas fa-bars"></i>
-        </button>
     </div>
     <ul class="sidebar-menu">
         <li>
@@ -22,6 +19,20 @@
             <a href="showcalendar_withevent.php">
                 <i class="fas fa-calendar-alt"></i>
                 Calendar
+            </a>
+        </li>
+        <li>
+            <a href="exampleAcc.html">
+                <i class="fas fa-lock"></i>
+                Instructor
+                
+            </a>
+        </li>
+        <li>
+            <a href="features.html">
+                <i class="fas fa-cogs"></i>
+                Features
+                
             </a>
         </li>
     </ul>
