--- a/projects/calendar/about.html
+++ b/projects/calendar/about.html
@@ -4,42 +4,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>About Our Team</title>
-    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="navbar.css" type="text/css">
+    <link rel="stylesheet" href="sidebar.css" type="text/css">
+    <link rel="stylesheet" href="proposal.css" type="text/css">
+    <link rel="stylesheet" href="about.css" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
-<header>
-    <h1>About Our Team</h1>
-</header>
-<main>
-    <div>
-        <a href="about.html" title="About the team">About the Team</a>
-        <a href="proposal.php" title="Proposal for the final">Proposal for the final</a>
-        <a href="showcalendar_withevent.php" title="Calendar">Calendar</a>
-      </div>
-    <section id="team-members">
-        <h2>Team Members</h2>
-        <ul>
-            <li>Jason Lin</li>
-            <li>Jeffrey Moon</li>
-            <li>Connor Cromer</li>
-        </ul>
-    </section>
+    <div id="navbar"></div>
+    <script>document.addEventListener('DOMContentLoaded', () => {
+        fetch('navbar.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('navbar').innerHTML = data;
+            });
+    });</script>
 
-    <section id="responsibilities">
-        <h2>Responsibilities &amp; Roles</h2>
+    <h1>About Our Team</h1>
+    <h2>CPSC 3750 – Web App Development</h2>
+
+    <nav class="proposal-nav">
+        <a href="about.html" title="About the team" class="active"><i class="fas fa-users"></i> About the Team</a>
+        <a href="proposal.php" title="Proposal for the final"><i class="fas fa-file-alt"></i> Proposal</a>
+        <a href="showcalendar_withevent.php" title="Calendar"><i class="fas fa-calendar-alt"></i> Calendar</a>
+        <a href="exampleAcc.html" title="Login User"><i class="fas fa-lock"></i> Instructor</a>
+        <a href="features.html" title="Features"><i class="fas fa-cog"></i> Features</a>
+    </nav>
+
+    <div class="section" id="team-members">
+        <h3>Team Members</h3>
+        <ul>
+            <li>Jason Lin: jlin22@clemson.edu </li>
+            <li>Jeffrey Moon: jdmoon@clemson.edu</li>
+            <li>Connor Cromer: cromer9@clemson.edu</li>
+        </ul>
+    </div>
+    <div class="section" id="team-members">
+        <h3>Team Members Website Links</h3>
+        <ul>
+            <li>Jason Lin:</li>
+            <li>Jeffrey Moon:<a href="https://dawsonmoon.com/showcalendar_withevent.php" target="_blank">https://dawsonmoon.com/showcalendar_withevent.php</a></li>
+            <li>Connor Cromer:<a href="http://www.schooln.org/calendar/login.html" target="_blank">www.schooln.org/calendar/login.html</a></li>
+        </ul>
+    </div>
+    <div class="section" id="responsibilities">
+        <h3>Contributions &amp; Roles</h3>
         <ul>
             <li><strong>Connor Cromer:</strong> authentication, Scheduling, Implementing features</li>
             <li><strong>Jason Lin:</strong> Theme toggle, Database/query, Javascript Animations, Css, Implementing features</li>
             <li><strong>Jeffrey Moon:</strong> Html Page Formating, DOM Tree Managment, Implementing features</li>
         </ul>
-    </section>
+    </div>
 
-    <section id="development-process">
-        <h2>Our Development Process</h2>
+    <div class="section" id="development-process">
+        <h3>Our Development Process</h3>
         <p>
             Instead of dedicating roles and process to programming languages, we operate in a feature-based style—completing features collectively rather than assigning one person per language.
         </p>
-    </section>
-</main>
+    </div>
 </body>
 </html>
